--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     package="com.example.woundmontoringapplicationv1">
 
     <uses-permission android:name="android.permission.INTERNET" />
@@ -12,12 +13,14 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@mipmap/app_design2"
         android:label="Wound Montoring Application V1"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/CustomWMAStyle">
-        <activity android:name=".ProcessImageActivity"></activity>
+        <activity android:name=".RegisterDressingActivity"></activity>
+        <activity android:name=".RemindersActivity" />
+        <activity android:name=".ProcessImageActivity" />
         <activity android:name=".CaptureImageActivity" />
         <activity android:name=".HomeActivity" />
         <activity android:name=".RegisterActivity" />
