--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,7 +4,7 @@ android {
     compileSdkVersion 28
     defaultConfig {
         applicationId "com.example.woundmontoringapplicationv1"
-        minSdkVersion 21
+        minSdkVersion 26
         targetSdkVersion 28
         versionCode 1
         versionName "1.0"
@@ -16,6 +16,15 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
+
+    splits {
+        abi {
+            enable true
+            reset()
+            include 'x86', 'armeabi-v7a', 'x86_64'
+            universalApk true
+        }
+    }
 }
 
 dependencies {
@@ -23,6 +32,12 @@ dependencies {
     implementation 'com.android.support:appcompat-v7:28.0.0'
     implementation 'com.android.support:mediarouter-v7:28.0.0'
     implementation 'com.android.support:support-v4:28.0.0'
+    //for recycler view
+    implementation 'com.android.support:recyclerview-v7:28.0.0'
+    //card view
+    implementation 'com.android.support:cardview-v7:28.0.0'
+    //for parsing json strings
+    implementation 'com.google.code.gson:gson:2.8.5'
     implementation 'com.android.support.constraint:constraint-layout:1.1.3'
     implementation 'com.google.android.gms:play-services:7.8+'
     implementation 'com.android.support:design:28.0.0'
@@ -31,5 +46,6 @@ dependencies {
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
     //Implement Volley for restful api services
     implementation 'com.android.volley:volley:1.1.1'
+    implementation project(path: ':openCVLibrary343')
 
 }
