--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,7 +18,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/CustomWMAStyle">
-        <activity android:name=".ForgotPasswordActivity"></activity>
+        <activity android:name=".RemindersActivityV2"></activity>
+        <activity android:name=".ForgotPasswordActivity" />
         <activity android:name=".LogoutActivity" />
         <activity android:name=".DressingCirclesColouranalysisActivity" />
         <activity android:name=".ProcessAndAnalyseImageActivity" />
