--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,27 +27,41 @@ android {
     }
 }
 
+apply plugin: 'com.google.gms.google-services'  // Google Play services Gradle plugin
+
+
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation 'com.android.support:appcompat-v7:28.0.0'
     implementation 'com.android.support:mediarouter-v7:28.0.0'
     implementation 'com.android.support:support-v4:28.0.0'
+
     //for recycler view
     implementation 'com.android.support:recyclerview-v7:28.0.0'
+
     //card view
     implementation 'com.android.support:cardview-v7:28.0.0'
+
     //for parsing json strings
     implementation 'com.google.code.gson:gson:2.8.5'
+
     implementation 'com.android.support.constraint:constraint-layout:1.1.3'
+
     implementation 'com.google.android.gms:play-services:7.8+'
+    implementation 'com.google.android.gms:play-services-analytics:16.0.8'
+
     implementation 'com.android.support:design:28.0.0'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
+
     //Implement Volley for restful api services
     implementation 'com.android.volley:volley:1.1.1'
+
     //for email builder
     implementation 'de.cketti.mailto:email-intent-builder:1.0.0'
     implementation project(path: ':openCVLibrary343')
+
+    implementation 'com.google.firebase:firebase-core:16.0.9'
 
 }
