--- a/build.gradle
+++ b/build.gradle
@@ -7,6 +7,9 @@ buildscript {
         
     }
     dependencies {
+        // Google Services plugin
+        classpath 'com.google.gms:google-services:4.2.0'
+
         classpath 'com.android.tools.build:gradle:3.4.0'
         
         // NOTE: Do not place your application dependencies here; they belong
