--- a/app/build.gradle
+++ b/app/build.gradle
@@ -48,7 +48,7 @@ dependencies {
     implementation 'com.android.support.constraint:constraint-layout:1.1.3'
 
     implementation 'com.google.android.gms:play-services:7.8+'
-    implementation 'com.google.android.gms:play-services-analytics:16.0.8'
+    //implementation 'com.google.android.gms:play-services-analytics:16.0.8'
 
     implementation 'com.android.support:design:28.0.0'
     testImplementation 'junit:junit:4.12'
@@ -62,6 +62,6 @@ dependencies {
     implementation 'de.cketti.mailto:email-intent-builder:1.0.0'
     implementation project(path: ':openCVLibrary343')
 
-    implementation 'com.google.firebase:firebase-core:16.0.9'
+    //implementation 'com.google.firebase:firebase-core:16.0.9'
 
 }
