--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,6 +27,7 @@ android {
     }
 }
 
+
 apply plugin: 'com.google.gms.google-services'  // Google Play services Gradle plugin
 
 
@@ -47,8 +48,13 @@ dependencies {
 
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
 
-    implementation 'com.google.android.gms:play-services:7.8+'
-    //implementation 'com.google.android.gms:play-services-analytics:16.0.8'
+    //implementation 'com.google.android.gms:play-services:7.8+'
+    implementation 'com.google.android.gms:play-services-plus:17.0.0'
+    implementation 'com.google.android.gms:play-services-auth:17.0.0'
+    implementation 'com.google.android.gms:play-services-gcm:17.0.0'
+    //implementation 'com.google.android.gms:play-services-ads:18.0.0'
+    implementation 'com.google.android.gms:play-services-vision:18.0.0'
+    implementation 'com.google.android.gms:play-services-analytics:17.0.0'
 
     implementation 'com.google.android.material:material:1.0.0'
     testImplementation 'junit:junit:4.12'
@@ -62,6 +68,8 @@ dependencies {
     implementation 'de.cketti.mailto:email-intent-builder:1.0.0'
     implementation project(path: ':openCVLibrary343')
 
+    //firebase
     implementation 'com.google.firebase:firebase-core:17.0.0'
+    implementation 'com.google.firebase:firebase-auth:17.0.0'
 
 }
