--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,10 +19,10 @@
         android:usesCleartextTraffic="true"
         android:supportsRtl="true"
         android:theme="@style/CustomWMAStyle">
-        <activity android:name=".UserDeclined"></activity>
-        <activity android:name=".UserWaitingForApproval" />
+        <activity android:name=".activities.LoginAndRegisterActivities.UserDeclinedActivity"></activity>
+        <activity android:name=".activities.LoginAndRegisterActivities.UserWaitingForApprovalActivity" />
         <activity
-            android:name=".LaunchActivity"
+            android:name=".activities.MainActivities.LaunchActivity"
             android:theme="@style/LaunchTheme">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -30,25 +30,25 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".RemindersActivityV2" />
-        <activity android:name=".ForgotPasswordActivity" />
-        <activity android:name=".LogoutActivity" />
-        <activity android:name=".DressingCirclesColouranalysisActivity" />
-        <activity android:name=".ProcessAndAnalyseImageActivity" />
-        <activity android:name=".RegisteredDressingsActivity" />
-        <activity android:name=".HistoryActivity" />
-        <activity android:name=".OpenCVColorAnalysisActivity" />
-        <activity android:name=".AnalysisSubmissionActivity" />
+        <activity android:name=".activities.MainActivities.RemindersActivityV2" />
+        <activity android:name=".activities.LoginAndRegisterActivities.ForgotPasswordActivity" />
+        <activity android:name=".activities.LoginAndRegisterActivities.LogoutActivity" />
+        <activity android:name=".activities.ImageProcessingActivities.DressingCirclesColouranalysisActivity" />
+        <activity android:name=".activities.ImageProcessingActivities.ProcessAndAnalyseImageActivity" />
+        <activity android:name=".activities.MainActivities.RegisteredDressingsActivity" />
+        <activity android:name=".activities.MainActivities.HistoryActivity" />
+        <activity android:name=".activities.ImageProcessingActivities.OpenCVColorAnalysisActivity" />
+        <activity android:name=".activities.ImageProcessingActivities.AnalysisSubmissionActivity" />
 
         <receiver android:name=".AlertReceiver" />
 
-        <activity android:name=".RegisterDressingActivity" />
-        <activity android:name=".RemindersActivity" />
-        <activity android:name=".ProcessImageActivity" />
-        <activity android:name=".CaptureImageActivity" />
-        <activity android:name=".HomeActivity" />
-        <activity android:name=".RegisterActivity" />
-        <activity android:name=".LoginActivity" />
+        <activity android:name=".activities.MainActivities.RegisterDressingActivity" />
+        <activity android:name=".activities.MainActivities.RemindersActivity" />
+        <activity android:name=".activities.ImageProcessingActivities.ProcessImageActivity" />
+        <activity android:name=".activities.ImageProcessingActivities.CaptureImageActivity" />
+        <activity android:name=".activities.MainActivities.HomeActivity" />
+        <activity android:name=".activities.LoginAndRegisterActivities.RegisterActivity" />
+        <activity android:name=".activities.LoginAndRegisterActivities.LoginActivity" />
     </application>
 
 </manifest>
