Fixed JSONObjectRequest parameters and refactoring

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -31,22 +31,22 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".activities$MainActivities.RemindersActivityV2" />
-        <activity android:name=".activities$LoginAndRegisterActivities.ForgotPasswordActivity" />
-        <activity android:name=".activities$LoginAndRegisterActivities.LogoutActivity" />
-        <activity android:name=".activities$MainActivities.RegisteredDressingsActivity" />
-        <activity android:name=".activities$MainActivities.HistoryActivity" />
-        <activity android:name=".activities$ImageProcessingActivities.AnalysisSubmissionActivity" />
+        <activity android:name=".activities.MainActivities.RemindersActivityV2" />
+        <activity android:name=".activities.LoginAndRegisterActivities.ForgotPasswordActivity" />
+        <activity android:name=".activities.LoginAndRegisterActivities.LogoutActivity" />
+        <activity android:name=".activities.MainActivities.RegisteredDressingsActivity" />
+        <activity android:name=".activities.MainActivities.HistoryActivity" />
+        <activity android:name=".activities.ImageProcessingActivities.AnalysisSubmissionActivity" />
 
         <receiver android:name=".AlertReceiver" />
 
-        <activity android:name=".activities$MainActivities.RegisterDressingActivity" />
-        <activity android:name=".activities$MainActivities.RemindersActivity" />
-        <activity android:name=".activities$ImageProcessingActivities.ProcessImageActivity" />
-        <activity android:name=".activities$ImageProcessingActivities.CaptureImageActivity" />
-        <activity android:name=".activities$MainActivities.HomeActivity" />
-        <activity android:name=".activities$LoginAndRegisterActivities.RegisterActivity" />
-        <activity android:name=".activities$LoginAndRegisterActivities.LoginActivity" />
+        <activity android:name=".activities.MainActivities.RegisterDressingActivity" />
+        <activity android:name=".activities.MainActivities.RemindersActivity" />
+        <activity android:name=".activities.ImageProcessingActivities.ProcessImageActivity" />
+        <activity android:name=".activities.ImageProcessingActivities.CaptureImageActivity" />
+        <activity android:name=".activities.MainActivities.HomeActivity" />
+        <activity android:name=".activities.LoginAndRegisterActivities.RegisterActivity" />
+        <activity android:name=".activities.LoginAndRegisterActivities.LoginActivity" />
     </application>
 
 </manifest>
